Wed Apr 26 11:23:11 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: need HAS_ANSI_VOLATILE for signal_requests_exit.

Sat Apr 22 00:36:37 1995  Theodore Y. Ts'o  (tytso@dcl)

	* network.c (setup_network): Don't rely on krb5_kdc_portname and
		krb5_kdc_sec_portname anymore.  Use the #define'd versions.

Fri Mar 31 16:50:07 1995  Theodore Y. Ts'o  (tytso@dcl)

	* main.c (main): Make sure the context is initialized before it is
	  	used.

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

	* kdc_util.c Use new calling conventions for krb5_rd_req_decoded().

Fri Mar 24 14:58:07 1995    <tytso@rsx-11.mit.edu>

	* replay.c: The KDC replay cache needs to store the database
		modification time, so that if the database is modified in
		between when it receives a request and when it receives a
		replay of the same request, it knows to throw away the
		replay cache entry and generate a new response (since the
		record in the database on which the response is based may
		have been modified). 

	* main.c (kdc_com_err_proc): Use syslog() instead of vsyslog().

Sat Mar 18 18:59:45 1995  John Gilmore  (gnu at toad.com)

	* kerberos_v4.c:  Replace STDARG_PROTOTYPES with HAVE_STDARG_H.

Tue Mar 14 15:25:38 1995    <tytso@rsx-11.mit.edu>

	* configure.in, Makefile.in: Use the libdes425 library so that the
		DES code doesn't get dragged in twice.

	* kdc_util.c (validate_as_request): Allow a client to obtain a
		password changing ticket, even if the client's key is
		expired.

	* main.c (usage, process_args, main): The KDC will disassociate
		itself from the terminal by default, unless the -n option
		is given.

Thu Mar  2 12:16:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:30:27 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE and ISODE_DEFS, replace check
		for -lsocket and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:27:11 1995  John Gilmore  (gnu at toad.com)
